--- a/index.html
+++ b/index.html
@@ -111,11 +111,23 @@
 <!-- Education -->
 <section id="education" class="py-16 px-6 max-w-5xl mx-auto" data-aos="fade-up">
   <h2 class="text-2xl font-bold text-teal-400 mb-6">🎓 Education</h2>
-  <ul class="text-gray-300 space-y-2">
-    <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
-    <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
-    <li><strong>SLC</strong> – Apex Life School | 2070</li>
-  </ul>
+  <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-gray-300 space-y-5 text-base leading-relaxed">
+    <div>
+      <p class="font-semibold text-white">B.Sc. CSIT</p>
+      <p>Swastik College (TU Affiliated)</p>
+      <p>2073–2078</p>
+    </div>
+    <div>
+      <p class="font-semibold text-white">+2 Science</p>
+      <p>Ambition Academy</p>
+      <p>2071–2073</p>
+    </div>
+    <div>
+      <p class="font-semibold text-white">SLC</p>
+      <p>Apex Life School</p>
+      <p>2070</p>
+    </div>
+  </div>
 </section>
 
 <!-- Training -->
